Fixed #1265 Flash message: close button covered by scroll bar

--- a/web/experimental/styles.scss
+++ b/web/experimental/styles.scss
@@ -75,6 +75,10 @@ body {
   flex-direction: column;
 }
 
+#hint-box .custom-scrollbar {
+  margin-right: 20px;
+}
+
 .custom-scrollbar::-webkit-scrollbar {
   -webkit-appearance: none;
   width: 9px;
